[package]
name = "my-ip"
version = "0.1.0"
authors = ["Joshua Marsh (icub3d) <joshua@themarshians.com>"]
edition = "2018"
description = "get your public ip address from the terminal"
repository = "https://github.com/dinglebit/ip.rs"
homepage = "https://www.dinglebit.com/"
readme = "README.md"
categories = ["command-line-interface"]
license = "MIT"
documentation = "https://docs.rs/dinglebit-ip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dinglebit-log = "0.1.0"
dinglebit-terminal = "0.1.3"
log = "0.4.14"
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde = { version = "1.0.125", features = ["derive"] }
